fix(ui): adds `hide-scrollbar` class and fixes #19

--- a/app/(general)/globals.scss
+++ b/app/(general)/globals.scss
@@ -38,6 +38,13 @@ body {
   .word-break-all {
     word-break: break-all;
   }
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 
 // Accessibility
